--- a/index.html
+++ b/index.html
@@ -1,90 +1,92 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Progate</title>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-</head>
-<body>
-  <header>
-    <div class="container">
-      <div class="header-left">
-        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="stylesheet.css">
+  </head>
+  <body>
+    <!-- ここからHTMLを書き始めてください -->
+    <div class="header">
+       <div class="header-logo">IT management Service</div>
+       <div class="header-list">
+       <ul>
+           <li>お客様のビジネスを支えるITサービスをご提供</li>
+           </ul>
+           </div>
+           </div>
+
+
+
+      <nav>
+        <ul>
+          <li class="selected">TopPage</li>
+          <li class="selected_1">IT Solution</li>
+          <li class="selected_1">IT Service</li>
+          <li>FAQ</li>
+          <li>Company</li>
+        </ul>
+      </nav>
+
+      <div class="main">
+        <div class="copy-container">
+          <p>私たちは高品質なITソリューション及び<br />お客様のニーズに合致したITサービスを提供いたします。
+
+           <div>
+
+           </div>
+
+           <div class="image_l">
+          <img src="https://coconala.com/uploaded_files/view/9947840" alt="" />
+          　　　　　 　　　　　　　　　　　　　　<img src="https://coconala.com/uploaded_files/view/9947840" alt="" />
+            <div class="image_2">
+               <img src="https://coconala.com/uploaded_files/view/9947840" alt="" />
+               　　　　 　　　　　　　　　　　　　　　<img src="https://coconala.com/uploaded_files/view/9947840" alt="" />
+
+
+                  </div>
+
+            </div>
       </div>
-      <span class="fa fa-bars menu-icon"></span>
-      <div class="header-right">
-        <a href="#">レッスン</a>
-        <a href="#">新規登録</a>
-        <a href="#" class="login">ログイン</a>
       </div>
-    </div>
-  </header>
-  <div class="top-wrapper">
-    <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
-      <div class="btn-wrapper">
-        <a href="#" class="btn signup">新規登録はこちら</a>
-        <p>or</p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
-      </div>
-    </div>
-  </div>
-  <div class="lesson-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>Learn Where to Get Started!</h2>
-      </div>
-      <div class="lessons">
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/html.png">
-            <p>HTML & CSS</p>
+
+      <div class="contents">
+        <h2 class="section-title">TOPICS</h2>
+
           </div>
-          <p class="text-contents">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
+        <div class="contents-item">
+          <h3>ITソリューション　　　　　    　　　　　　　　　ITサービス</h3>
+          <p>弊社が提供するITソリューションを　　　　　　　　　　 弊社が提供するITサービスをご紹介 <br />ご紹介します。　　　　　　　　　　　　　　　　　　　 します。</p>
+          <p>詳しくはこちら　　　　　　　　　　　　　　　　　　　 詳しくはこちら</p>
         </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-            <p>jQuery</p>
+        <div class="contents-item_1">
+          <h3>よくある質問　　　　　　　　　　　　　　　　 会社概要</h3>
+          <p>よくある質問をまとめました。ご一　　　　　　　　　　弊社の会社・沿革などをお知 <br />読ください。　　　　　　　　　　　　　　　　　　　　らせいたします。</p>
+          <p>詳しくはこちら　　　　　　　　　　　　　　　　　　　詳しくはこちら</p>
+        </div>
+
+        <div class="footer">
+        <h2>新着情報</h2>
+        <p>2019.09.21　よくある質問を更新いたしました。</p>
+        <p>2019.09.18　ITソリューションを更新いたしました。</p>
+        <p>2019.09.15　会社概要を更新いたしました。</p>
+        <p>2019.08.28　弊社の夏季休暇は8月10日~8月15日とさせて頂きます。</p>
+        <p>2019.08.12　ウェブサイトをリニューアルしました。</p>
+
+        </div>
+
+        <div class="foote_1">
+          <p>>© 2019 IT management Service. All rights reserved</p>
+        </div>
+
+
+          <div>
+
           </div>
-          <p class="text-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/ruby.png">
-            <p>Ruby</p>
-          </div>
-          <p class="text-contents">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/php.png">
-            <p>PHP</p>
-          </div>
-          <p class="text-contents">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
-        </div>
-      </div>
-      <div class="clear"></div>
-    </div>
-  </div>
-  <div class="message-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
-        <h3>Let's learn to code, learn to be creative!</h3>
-      </div>
-      <span class="btn message">さっそく開発する</span>
-    </div>
-  </div>
-  <footer>
-    <div class="container">
-      <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-      <p>Learn to Code, Learn to be Creative.</p>
-    </div>
-  </footer>
-</body>
+
+
+
+
+
+  </body>
 </html>
